--- a/4. special-function-and-keyword/code/gallery.html
+++ b/4. special-function-and-keyword/code/gallery.html
@@ -33,6 +33,8 @@
   </head>
   <body>
     <h2>My Gallery</h2>
+    <!--emmet = ul.gallery>li*10>img[src="$.jpg"] 
+    untuk menghasilkan seperti yang dibawah -->
     <ul class="gallery">
       <li><img src="img/1.jpeg" alt="" /></li>
       <li><img src="img/2.jpg" alt="" /></li>
