--- a/4. special-function-and-keyword/code/gallery.html
+++ b/4. special-function-and-keyword/code/gallery.html
@@ -13,21 +13,29 @@
         padding: 0;
         background-color: #ddd;
       }
-
+      body {
+        text-align: center;
+        margin:20px auto;
+      }
+      h2 {
+        margin:20px auto;
+      }
       img {
         display: block;
         width: 100%;
       }
+      
 
       .gallery {
-        width: 80%;
-        margin: auto;
-        border: 10px solid white;
-        box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.5);
+        width:80%;
+        margin:30px auto;
+        display:grid;
+        border :1px solid white;
+        box-shadow: 2px 2px 2px rgba(0,0,0,.5);
+        grid-template-columns:repeat(auto-fit, minmax(150px, 1fr));
         list-style: none;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-        grid-gap: 5px;
+        grid-gap:5px;
+
       }
     </style>
   </head>
