menambahkan syntak git-template dan kurang git gap di menit 13.04

--- a/5. area-and-gap/code/latihan2.html
+++ b/5. area-and-gap/code/latihan2.html
@@ -20,7 +20,8 @@
           [baris1-mulai] 'header header header' 50px [baris1-akhir]
           [baris2-mulai] 'footer footer footer' 50px [baris2-akhir]
           / 1fr 2fr 3fr; */
-        grid-template-rows: [baris1-mulai] 50px [baris1-akhir baris1-akhir] 50px [baris2-akhir];
+        grid-template-rows: [baris1-mulai] 50px 
+        [baris1-akhir baris2-akhir] 100px [baris2-akhir];
         grid-template-columns: 1fr 2fr 3fr;
         grid-template-areas:
           'header header header'
