--- a/6. grid-alignment/code/justify-content.html
+++ b/6. grid-alignment/code/justify-content.html
@@ -10,19 +10,21 @@
         padding: 0;
       }
       .container {
+        background-color: black;
         width: 80%;
         margin: auto;
         display: grid;
         grid-template-columns: 120px 180px 120px;
         grid-template-rows: 80px 80px;
         gap: 5px;
-        /* justify-content: start; */
+        
+        justify-content: start;
         /* justify-content: end; */
         /* justify-content: center; */
         /* justify-content: stretch; */
         /* justify-content: space-around; */
         /* justify-content: space-between; */
-        justify-content: space-evenly;
+        /* justify-content: space-evenly; */
       }
 
       .items {
