menambahkan syntak.txt

--- a/7. grid-item-properties/code/latihan1.html
+++ b/7. grid-item-properties/code/latihan1.html
@@ -30,10 +30,10 @@
       }
 
       .my-item {
-        /* grid-column-start: 2;
+        grid-column-start: 2;
         grid-column-end: 4;
         grid-row-start: 2;
-        grid-row-end: 4; */
+        grid-row-end: 4;
 
         /* grid-column-start: 1;
         grid-column-end: span 3;
@@ -44,11 +44,11 @@
         grid-column-end: empat;
         grid-row-start: baris1;
         grid-row-end: b4; */
-
+/* 
         grid-column-start: -1;
         grid-column-end: -2;
         grid-row-start: -4;
-        grid-row-end: -1;
+        grid-row-end: -1; */
 
         background-color: lightblue;
       }
