--- a/FLEXBOX/index.html
+++ b/FLEXBOX/index.html
@@ -21,10 +21,12 @@
             <li><a href="">About</a></li>
         </ul>
         <div class="menu-toggle">
+            <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
         </div>
     </nav>
+<script src="script.js"></script>
 </body>
 </html>
